# unifi-cli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build-release-binaries.sh  pyinstaller_entry.py
src/unifi_cli/: __init__.py  cli.py  config.py  core.py
tests/: test_cli.py
