[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "unifi-cli"
version = "0.2.0"
description = "Safe UniFi Network CLI for inventory, DNS, reservations, and guarded write operations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["cli", "network", "ubiquiti", "unifi"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/JDIVE/unifi-cli"
Issues = "https://github.com/JDIVE/unifi-cli/issues"
Repository = "https://github.com/JDIVE/unifi-cli"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.15.0",
  "pyinstaller>=6.13.0",
  "pytest>=8.3.5",
  "ruff>=0.11.8",
]

[project.scripts]
unifi = "unifi_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
